add register data to localstorage

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emulator": "emulator -avd Pixel_2_XL_API_27"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.10.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.2.8",
     "@react-navigation/native": "^5.1.6",
