--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,10 +129,10 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.prawito.mydoctor"
+        applicationId "com.singgih.mydoctor"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
+        versionCode 4
         versionName "1.1.0"
     }
     splits {
